Gihub Action: Run 'swift test' not 'swift run' and name the docker image correctly

--- a/.github/workflows/macostest.yml
+++ b/.github/workflows/macostest.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Build
       run: swift build -c release
     - name: Run tests
-      run: swift run -c release
+      run: swift test -c release
