--- a/.github/workflows/linuxtest.yml
+++ b/.github/workflows/linuxtest.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run tests
-      run: docker build . --file Dockerfile --tag integer128-tests:$(date +%s)
+      run: docker build . --file Dockerfile --tag foundation-benchmark-tests:$(date +%s)
